# CRAgent

./: .gitignore  手册.txt  未实现模块整理.md  运行流程详解.md
agent-system/: .gitignore  README.md  main.py  requirements.txt  test_framework.py  test_llm_call.py  test_llm_filter_integration.py
agent-system/agents/: __init__.py  bug_agent.py  tool_agent.py
agent-system/config/: checklist.json  settings.py
agent-system/context_engine/: __init__.py  checklist.py
agent-system/feedback/: __init__.py  loop.py
agent-system/ingestion/: __init__.py  pr_parser.py
agent-system/judge/: __init__.py  filter.py
agent-system/llm/: __init__.py  client.py
agent-system/models/: __init__.py
agent-system/reasoning/: __init__.py  long_cot.py
agent-system/tools/: __init__.py  ast_parser.py  code_search.py  grep_tool.py
sample-lib/: README.md  pyproject.toml
sample-lib-2/: README.md  pyproject.toml
sample-lib-2/pr_diffs/: 002-silent-failure-and-leak.diff
sample-lib-2/src/samplelib2/: __init__.py  config_loader.py
sample-lib-2/tests/: conftest.py  test_config_loader.py
sample-lib/docs/: ARCHITECTURE.md  标准答案
sample-lib/pr_diffs/: 001-introduce-cache-bug.diff
sample-lib/src/samplelib/: __init__.py  lru.py  text.py
sample-lib/tests/: test_lru.py  test_text.py
