[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "samplelib"
version = "0.1.0"
description = "A small sample library project for testing the CRAgent code review pipeline."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "CRAgent Test" }]
license = { text = "Proprietary" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Other/Proprietary License",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
